Added bootstrap example option.

--- a/jQueryFundamentalsUI/Views/Home/Index.cshtml
+++ b/jQueryFundamentalsUI/Views/Home/Index.cshtml
@@ -3,14 +3,14 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>jQuery Fundamentals</h1>
+    <p class="lead">jQuery is a JavaScript library that allows you to write powerful front end scripting.</p>
+    <p><a href="http://jquery.com/" class="btn btn-primary btn-lg">More details &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>jQuery Fundamentals</h2>
         <p>
             ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
             enables a clean separation of concerns and gives you full control over markup
@@ -19,13 +19,51 @@
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
+        <h2>Using Selectors</h2>
         <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
+        <h2>DOM Interaction</h2>
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
+<div class="row">
+    <div class="col-md-4">
+        <h2>Handling Events</h2>
+        <p>How to handle events.  Attach events</p>
+        <p><a href="#" class="btn btn-default">More...</a></p>
+    </div>
+
+    <div class="col-md-4">
+        <h2>AJAX Feature</h2>
+        <p>Ajax provides powerfull way to communicate
+        with the server and let developer implement 
+        responsive UI.</p>
+        <a href="#" class="btn btn-default">More...</a>
+    </div>
+</div>
+
+<hr />
+
+<div class="row">
+    <div class="col-md-4">
+        <h2>Bootstrap examples</h2>
+        <p>Bootstrap examples.</p>
+        @Html.ActionLink("Bootstrap Demo", "Index", "BootstrapHome", null, new { @class = "btn btn-default" })
+    </div>
+</div>
+
+<br />
+
+<div class="dropdown">
+    <button class="btn btn-success" data-toggle="dropdown" id="pickButton">Pick One...</button>
+    <ul class="dropdown-menu" id="pickOptions">
+        <li><a href="#">One</a></li>
+        <li><a href="#">One</a></li>
+        <li><a href="#">One</a></li>
+        <li><a href="#">One</a></li>
+    </ul>
+</div>
+
